[package]
name    = "libmongoc-sys"
version = "1.1.10"
authors = ["Thijs Cadier <thijs@appsignal.com>"]
build   = "build.rs"
links   = "libmongoc"

[lib]
name = "mongoc_sys"

[dependencies]
libc        = "*"
openssl-sys = "*"

[build-dependencies.bindgen]
git = "https://github.com/crabtw/rust-bindgen.git"
